# ops-service

./: .env.development  .env.example  .gitignore  Cargo.toml  DEPENDENCY_UPGRADE_HOLD.md  DEPLOYMENT_REPORT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.ops-runner  Makefile  README.md  dev.sh  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.runner.yml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: README.md  ci.yml  release.yml  test.yml
migrations/: 000001_init_baseline.sql  000002_identity_and_audit.sql  000002_p1_identity_and_audit.sql  000003_seed_data.sql  000004_job_system.sql  000004_p2_job_system.sql  000005_approval_system.sql  000006_p3_security_enhancements.sql  000006_security_enhancements.sql  000007_host_credentials.sql  000008_build_system.sql  000009_runner_docker_config.sql  000010_permission_alignment.sql  000011_build_log_offset.sql  000012_build_steps_alignment.sql  CHEATSHEET.md  QUICKSTART.md  README.md
nginx/: nginx.conf  ssl.conf
nginx/ssl/: cert.pem  key.pem
scripts/: README.md  ci_test.sh  migrate.sh  run_tests.sh  setup_test_db.sh  test_docker.sh  test_local.sh
scripts/db/: migrate.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  routes.rs  telemetry.rs
src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/common/: Cargo.toml
src/common/src/: docker.rs  error.rs  execution.rs  lib.rs  messages.rs  ssh.rs
src/handlers/: approval.rs  asset.rs  audit.rs  auth.rs  health.rs  job.rs  metrics.rs  mod.rs  user.rs
src/models/: approval.rs  asset.rs  auth.rs  build.rs  job.rs  mod.rs  role.rs
src/ops-runner/: Cargo.toml
src/ops-runner/src/: client.rs  config.rs  docker.rs  executor.rs  main.rs  messages.rs  publisher.rs  worker.rs
src/ops-service/: Cargo.toml
src/ops-service/src/: config.rs  db.rs  error.rs  lib.rs  middleware.rs  permissions.rs  rabbitmq.rs  routes.rs  telemetry.rs
src/ops-service/src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/ops-service/src/concurrency/: mod.rs
src/ops-service/src/handlers/: approval.rs  artifact.rs  asset.rs  audit.rs  auth.rs  build.rs  build_webhook.rs  health.rs  job.rs  metrics.rs  mod.rs  role.rs  runner.rs  runner_config.rs  user.rs
src/ops-service/src/middleware/: mod.rs  webhook_hmac.rs
src/ops-service/src/models/: approval.rs  asset.rs  audit.rs  build.rs  job.rs  mod.rs  role.rs  runner_config.rs  user.rs
src/ops-service/src/realtime/: mod.rs
src/ops-service/src/repository/: auth_repo.rs
src/ops-service/src/services/: approval_service.rs  audit_service.rs  auth_service.rs  job_service.rs  mod.rs  permission_service.rs  runner_service.rs  storage_service.rs
src/ops-service/src/ssh/: executor.rs  mod.rs
src/ops-service/tests/: README.md  api_tests.rs  audit_service_tests.rs  error_tests.rs  jwt_tests.rs  model_validation_tests.rs  password_tests.rs  permission_service_tests.rs  repository_tests.rs
src/output/: mod.rs
src/realtime/: mod.rs
src/repository/: asset_repo.rs  audit_repo.rs  auth_repo.rs  mod.rs  role_repo.rs  user_repo.rs
src/services/: approval_service.rs  audit_service.rs  auth_service.rs  job_service.rs  mod.rs  permission_service.rs
src/ssh/: executor.rs  mod.rs
tests/: README.md  api_auth_tests.rs  api_health_tests.rs  api_tests.rs  audit_service_tests.rs  error_tests.rs  jwt_tests.rs  model_validation_tests.rs  password_tests.rs  permission_service_tests.rs  repository_tests.rs  service_tests.rs
tests/common/: mod.rs
