[package]
name = "common"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 常用类型
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "2.0"

# 安全
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
serial_test = "3.3"
