[package]
name = "ops-runner"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
lapin = "2.3"
futures-util = "0.3"
async-trait = "0.1"
sysinfo = "0.32"
sha2 = "0.10"
hex = "0.4"
url = "2.5"
gethostname = "0.4"
glob = "0.3"
bollard = "0.19"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
common = { path = "../common" }
