[package]
name = "ops-runner"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
lapin = "4.5.0"
futures-util = "0.3.32"
async-trait = "0.1.89"
sysinfo = "0.38.4"
sha2 = "0.11.0"
hex = "0.4.3"
url = "2.5.8"
gethostname = "1.1.0"
glob = "0.3.3"
bollard = "0.20.2"
tokio-util = { version = "0.7.18", features = ["io"] }
futures = "0.3.32"
common = { path = "../common" }
