[package]
name = "ops-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Web框架
axum = { version = "0.8", features = ["tower-log", "tracing"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "trace",
    "compression-br",
    "compression-gzip",
    "limit",
    "cors",
] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.49", features = ["full"] }

# 数据库
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "chrono",
    "uuid",
    "json",
] }

# 配置
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

# 日志与追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
] }

# 工具
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"

# 安全
secrecy = { version = "0.8", features = ["serde"] }

# 认证与安全
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
password-hash = "0.5"

# SSH执行
russh = "0.45"
russh-keys = "0.45"

# 输出处理
regex = "1.11"
once_cell = "1.20"

# 验证
validator = { version = "0.20", features = ["derive"] }

# 指标
metrics = "0.24"
base64 = "0.22.1"

# 限流
dashmap = "6.1"

# Common types
common = { path = "../common" }

# RabbitMQ
lapin = "2.5"

# S3 存储支持
rust-s3 = { version = "0.34", features = ["fail-on-err"] }

[dev-dependencies]
tower-test = "0.4"
http-body-util = "0.1"

# 测试依赖
axum-macros = "0.4"
serial_test = "3.3.1"
