[package]
name = "ops-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Web框架
axum = { version = "0.8.9", features = ["tower-log", "tracing"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = [
    "trace",
    "compression-br",
    "compression-gzip",
    "limit",
    "cors",
] }
hyper = { version = "1.9.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
tokio = { version = "1.52.1", features = ["full"] }

# 数据库
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "chrono",
    "uuid",
    "json",
] }

# 配置
config = "0.15.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dotenv = "0.15.0"

# 日志与追踪
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "json",
    "fmt",
] }

# 工具
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
futures = "0.3.32"
tokio-stream = "0.1.18"
async-trait = "0.1.89"

# 安全
secrecy = { version = "0.10.3", features = ["serde"] }

# 认证与安全
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
rand = "0.10.1"
sha2 = "0.11.0"
hex = "0.4.3"
password-hash = "0.6.1"

# SSH执行
russh = "0.60.1"
russh-keys = "0.49.2"

# 输出处理
regex = "1.12.3"
once_cell = "1.21.4"

# 验证
validator = { version = "0.20.0", features = ["derive"] }

# 指标
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
base64 = "0.22.1"

# 限流
dashmap = "6.1.0"

# Common types
common = { path = "../common" }

# RabbitMQ
lapin = "4.5.0"

# S3 存储支持
rust-s3 = { version = "0.37.1", features = ["fail-on-err"] }

[dev-dependencies]
tower-test = "0.4.0"
http-body-util = "0.1.3"

# 测试依赖
axum-macros = "0.5.1"
serial_test = "3.4.0"
